# freenet-search-engine

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
crates/contract-catalog/: Cargo.toml
crates/contract-catalog/src/: lib.rs
crates/contract-catalog/tests/: anti_sybil_tests.rs  crdt_commutativity_tests.rs  reputation_tests.rs  summarize_delta_tests.rs  update_state_tests.rs  validate_state_tests.rs
crates/contract-fulltext-shard/: Cargo.toml
crates/contract-fulltext-shard/src/: lib.rs
crates/contract-fulltext-shard/tests/: crdt_commutativity_tests.rs  shard_routing_tests.rs  summarize_delta_tests.rs  update_state_tests.rs  validate_state_tests.rs
crates/delegate-identity/: Cargo.toml
crates/delegate-identity/src/: lib.rs
crates/delegate-identity/tests/: keypair_tests.rs  signing_tests.rs
crates/search-common/: Cargo.toml
crates/search-common/src/: bloom.rs  extraction.rs  hashing.rs  lib.rs  normalization.rs  scoring.rs  tokenization.rs  types.rs  web_container.rs
crates/search-common/tests/: bloom_tests.rs  determinism_property_tests.rs  extraction_tests.rs  hashing_tests.rs  normalization_tests.rs  scoring_tests.rs  tokenization_tests.rs  web_container_tests.rs
crates/search-common/tests/fixtures/: mod.rs
crates/web-container-contract/: Cargo.toml
crates/web-container-contract/src/: lib.rs
docs/plans/: 2026-02-11-contract-based-architecture-design.md  2026-02-13-response-to-ian-architecture-notes.md
scripts/: deploy-live.sh  deploy-local.sh  deploy-network.sh  network-start.sh  network-stop.sh  redeploy-test-apps.sh  redeploy-webapp.sh
tests/: check-clippy.sh  check-wasm-build.sh
tests/integration/: publish-test-apps.sh
tests/integration/test-app-1/: index.html
tests/integration/test-app-2/: index.html
tests/integration/test-app-3/: index.html
tests/integration/test-app-4/: index.html
tools/deploy-helper/: Cargo.toml
tools/deploy-helper/src/: main.rs
tools/web-container-tool/: Cargo.toml
tools/web-container-tool/src/: main.rs
ui/: Cargo.toml  index.html
ui/assets/: main.css
ui/src/: main.rs  state.rs
ui/src/api/: contracts.rs  contribution.rs  mod.rs  node_api.rs  types.rs
ui/src/discovery/: cache.rs  detector.rs  http_fallback.rs  mod.rs  pipeline.rs  title.rs
ui/src/search/: mod.rs  query.rs  ranking.rs
ui/src/views/: app_card.rs  app_directory.rs  mod.rs  search_bar.rs  search_results.rs  settings.rs
