[package]
name = "freenet-search-engine"
version.workspace = true
edition.workspace = true

[dependencies]
# UI Framework
dioxus = { version = "0.7", features = ["web"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Web
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "Window",
    "Storage",
    "Navigator",
    "Clipboard",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Freenet
freenet-stdlib = { git = "https://github.com/freenet/freenet-stdlib", rev = "09ba79d", features = ["net"] }

# XZ decompression (pure Rust, WASM-compatible)
lzma-rs = "0.3"

# Logging
tracing = "0.1"
