[package]
name = "freenet-search-engine"
version.workspace = true
edition.workspace = true

[dependencies]
# UI Framework
dioxus = { version = "0.7", features = ["web"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Web
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "Window",
    "Storage",
    "Navigator",
    "Clipboard",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Freenet
freenet-stdlib = { git = "https://github.com/freenet/freenet-stdlib", rev = "0a941ce", features = ["net"] }
search-common = { path = "../crates/search-common" }

# Crypto (for contributor identity in settings)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# Hashing
sha2 = "0.10"
ciborium = "0.2"

# XZ decompression (pure Rust, WASM-compatible)
lzma-rs = "0.3"

# Logging
tracing = "0.1"
