[package]
name = "web-container-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = { workspace = true }
ciborium = { workspace = true }
freenet-stdlib = { workspace = true, features = ["contract"] }
serde = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
rand = { version = "0.8", features = ["std_rng"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["freenet-main-contract"]
freenet-main-contract = []
trace = ["freenet-stdlib/trace"]
