[package]
name = "web-container-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { workspace = true }
clap = { version = "4", features = ["derive"] }
ciborium = { workspace = true }
serde = { workspace = true }
bs58 = "0.5"
toml = "0.8"
dirs = "6"
rand = { version = "0.8", features = ["std_rng"] }
